2006-04-23  Daiki Ueno  <ueno@unixuser.org>

	* mime-pgp.el (mime-verify-application/*-signature): New function.
	(mime-verify-application/pgp-signature): Abolished.
	(mime-verify-application/pkcs7-signature): Abolished.

2006-04-23  Daiki Ueno  <ueno@unixuser.org>

	* mime-pgp.el (mime-verify-application/pkcs7-signature): Use EasyPG.
	(mime-view-application/pkcs7-mime): Ditto.

	* mime-edit.el (mime-edit-sign-smime): Use EasyPG.
	(mime-edit-encrypt-smime): Ditto.

	* SEMI-ELS (semi-modules-to-compile): Don't install PGG.

2006-04-20  Daiki Ueno  <ueno@unixuser.org>

	* mime-pgp.el (mime-view-application/pgp): Use epg-signature-to-string.
	(mime-verify-application/pgp-signature): Ditto.

2006-04-20  Daiki Ueno  <ueno@unixuser.org>

	* mime-pgp.el: Require 'epg.
	(mime-view-application/pgp): Use EasyPG.
	(mime-verify-application/pgp-signature): Ditto.
	(mime-add-application/pgp-keys): Ditto.

	* mime-edit.el: Require 'epa.
	(mime-edit-user-agent-value): Added EasyPG version number.
	(mime-edit-sign-pgp-mime): Use EasyPG.
	(mime-edit-encrypt-pgp-mime): Ditto.
	(mime-edit-sign-pgp-kazu): Ditto.
	(mime-edit-encrypt-pgp-kazu): Ditto.
	(mime-edit-insert-key): Ditto.
	(mime-edit-decode-multipart-in-buffer): Ditto.

2006-02-18  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* mime-edit.el (mime-edit-delete-trailing-whitespace): New
	Function for RFC3156.
	(mime-edit-sign-pgp-mime): Use it.

2003-12-18  Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el (pgg-gpg-process-region): Set environment variable
	LANGUAGE as well.  GNU gettext gives precedence to LANGUAGE over
	LC_ALL, when different language code is specified.  Thanks to
	Tatsuya Kinoshita <tats@vega.ocn.ne.jp>.
	[cf. <emacs-mime-ja:1599>]

2003-12-17  Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el (pgg-gpg-messages-locale): New user option.
	(pgg-gpg-process-region): Set environment variable LC_ALL when
	pgg-gpg-messages-locale is specified.

	* pgg-def.el (pgg-messages-locale): New user option.
